--- a/index.html
+++ b/index.html
@@ -1,92 +1,93 @@
-<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>teste2</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <title>teste</title>
+
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
-      width: 100%;
-      height: 100%;
+      margin: 0;
+      padding: 0;
       overflow: hidden;
-      background: #000;
-      font-family: sans-serif;
+      background: black;
+      height: 100%;
+      width: 100%;
     }
-    #video, #overlay {
-      position: absolute;
+
+    #camera-wrap {
+      position: fixed;
+      inset: 0;
       width: 100vw;
       height: 100vh;
-      object-fit: cover;
+      overflow: hidden;
+      background: black;
     }
-    #overlay {
+
+    video {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      background: black;
+    }
+
+    #frame {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
       pointer-events: none;
     }
+
     #buttons {
-      position: absolute;
-      bottom: 50px;
+      position: fixed;
+      bottom: 25px;
       width: 100%;
       display: flex;
       justify-content: center;
-      gap: 40px;
-      z-index: 10;
+      gap: 20px;
+      z-index: 20;
     }
-    button {
-      width: 70px;
-      height: 70px;
+
+    /* Botões */
+    .icon-btn {
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
-      border: none;
-      background: white;
-      font-size: 28px;
       cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      object-fit: cover;
+      border: none;
+      background: none;
+      padding: 0;
+      transition: transform 0.2s;
     }
-    #preview-container {
-      position: absolute;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 11;
-      display: none;
-      flex-direction: column;
-      align-items: center;
+
+    .icon-btn:hover {
+      transform: scale(1.1);
     }
-    #photo-preview {
-      width: 85vw;
-      max-width: 280px;
-      border: 3px solid white;
-      border-radius: 10px;
-      margin-bottom: 8px;
-    }
-    #save-btn, #retry-btn {
-      background: #4CAF50;
-      color: white;
-      border-radius: 6px;
-      padding: 8px 16px;
-      font-size: 15px;
-      margin-top: 5px;
-      width: 160px;
-    }
-    #instructions {
-      color: #fff;
-      font-size: 14px;
-      font-weight: bold;
-      background-color: rgba(0,0,0,0.6);
-      padding: 10px 12px;
-      border-radius: 8px;
-      margin-top: 10px;
-      display: none;
-      text-align: center;
-      max-width: 90%;
-    }
+
+    #download { display: none; }
   </style>
 </head>
 <body>
-  <video id="video" autoplay muted playsinline></video>
+
+<video id="video" autoplay muted playsinline></video>
   <img id="overlay" src="moldura.png" alt="Moldura" />
   <div id="buttons">
-    <button id="switch-camera" title="Trocar câmera">🔄</button>
-    <button id="capture" title="Tirar foto">📸</button>
+    
+  <div id="camera-wrap">
+    <video id="video" autoplay playsinline muted></video>
+    <img id="frame" src="moldura.png">
+  </div>
+
+  <div id="buttons">
+    <img id="switchBtn" class="icon-btn" src="trocarcamera.png" title="Trocar câmera">
+    <img id="snapBtn" class="icon-btn" src="tirarfoto.png" title="Tirar Foto">
+  </div>
+
+  <a id="download" download="fotomoldurapersonalizada.png"></a>
+
   </div>
   <canvas id="canvas" style="display:none;"></canvas>
   <div id="preview-container">
@@ -97,79 +98,116 @@
       Se estiver no iPhone:<br>
       Toque e segure a imagem e selecione “Salvar na Fototeca”.
     </div>
+
   </div>
+
+  <a id="download" download="fotomoldurapersonalizada.png"></a>
+
   <script>
-    const video = document.getElementById('video');
-    const overlay = document.getElementById('overlay');
-    const canvas = document.getElementById('canvas');
-    const captureBtn = document.getElementById('capture');
-    const switchCameraBtn = document.getElementById('switch-camera');
-    const photoPreview = document.getElementById('photo-preview');
-    const previewContainer = document.getElementById('preview-container');
-    const saveBtn = document.getElementById('save-btn');
-    const retryBtn = document.getElementById('retry-btn');
-    const instructions = document.getElementById('instructions');
+    const video = document.getElementById("video");
+    const frame = document.getElementById("frame");
+    const snapBtn = document.getElementById("snapBtn");
+    const switchBtn = document.getElementById("switchBtn");
+    const download = document.getElementById("download");
 
-    let usingFrontCamera = true;
-    let stream;
+    let stream = null;
+    let usingFront = true;
 
-    async function startCamera() {
-      if (stream) stream.getTracks().forEach(track => track.stop());
+    async function startCamera(){
+      if(stream){
+        stream.getTracks().forEach(t => t.stop());
+      }
+
       const constraints = {
-        video: {
-          facingMode: usingFrontCamera ? 'user' : 'environment',
-          width: { ideal: 1920 },
-          height: { ideal: 1080 }
-        }
+        video: { facingMode: usingFront ? "user" : "environment" }
       };
+
       stream = await navigator.mediaDevices.getUserMedia(constraints);
       video.srcObject = stream;
-      video.style.transform = usingFrontCamera ? 'scaleX(-1)' : 'scaleX(1)';
-      overlay.style.transform = 'scaleX(1)';
+
+      // Espelhamento apenas no preview
+      video.style.transform = usingFront ? "scaleX(-1)" : "scaleX(1)";
+
+      await waitForVideoReady();
     }
 
-    switchCameraBtn.onclick = () => {
-      usingFrontCamera = !usingFrontCamera;
+    function waitForVideoReady(){
+      return new Promise(resolve => {
+        if(video.readyState >= 2 && video.videoWidth > 0){
+          resolve();
+          return;
+        }
+        video.onloadedmetadata = () => resolve();
+      });
+    }
+
+    // Trocar câmera
+    switchBtn.addEventListener("click", () => {
+      usingFront = !usingFront;
       startCamera();
-    };
+    });
 
-    captureBtn.onclick = () => {
-      const track = stream.getVideoTracks()[0];
-      const settings = track.getSettings();
-      const width = settings.width;
-      const height = settings.height;
+    // Tirar foto
+    snapBtn.addEventListener("click", async () => {
 
-      canvas.width = width;
-      canvas.height = height;
-      const ctx = canvas.getContext('2d');
-      if (usingFrontCamera) {
-        ctx.translate(width, 0);
-        ctx.scale(-1, 1);
+      await waitForVideoReady();
+
+      const vw = video.videoWidth;
+      const vh = video.videoHeight;
+
+      const targetW = 720;
+      const targetH = 1280;
+
+      const canvas = document.createElement("canvas");
+      canvas.width = targetW;
+      canvas.height = targetH;
+      const ctx = canvas.getContext("2d");
+
+      const buffer = document.createElement("canvas");
+      buffer.width = targetW;
+      buffer.height = targetH;
+      const btx = buffer.getContext("2d");
+
+      // --- DESENHAR A CÂMERA ---
+      btx.save();
+      if (usingFront) {
+        btx.translate(targetW, 0);
+        btx.scale(-1, 1);
       }
-      ctx.drawImage(video, 0, 0, width, height);
-      ctx.setTransform(1, 0, 0, 1, 0, 0);
-      ctx.drawImage(overlay, 0, 0, width, height);
-      const dataUrl = canvas.toDataURL('image/png');
-      photoPreview.src = dataUrl;
-      previewContainer.style.display = 'flex';
-    };
 
-    saveBtn.onclick = () => {
-      const link = document.createElement('a');
-      link.download = 'foto-moldura.png';
-      link.href = photoPreview.src;
-      link.click();
-      if (/iPhone|iPad|iPod/i.test(navigator.userAgent)) {
-        instructions.style.display = 'block';
+      const videoRatio = vw / vh;
+      const targetRatio = targetW / targetH;
+
+      let sx, sy, sw, sh;
+
+      if (videoRatio > targetRatio) {
+        sh = vh;
+        sw = sh * targetRatio;
+        sx = (vw - sw) / 2;
+        sy = 0;
+      } else {
+        sw = vw;
+        sh = sw / targetRatio;
+        sx = 0;
+        sy = (vh - sh) / 2;
       }
-    };
 
-    retryBtn.onclick = () => {
-      previewContainer.style.display = 'none';
-      instructions.style.display = 'none';
-    };
+      btx.drawImage(video, sx, sy, sw, sh, 0, 0, targetW, targetH);
+      btx.restore();
+
+      // Copiar buffer
+      ctx.drawImage(buffer, 0, 0);
+
+      // Desenhar moldura (única)
+      ctx.drawImage(frame, 0, 0, targetW, targetH);
+
+      const img = canvas.toDataURL("image/png");
+      download.href = img;
+      download.click();
+    });
 
     startCamera();
   </script>
+
 </body>
 </html>
