--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>teste</title>
+  <title>Maitê</title>
 
   <style>
     html, body {
@@ -50,7 +51,6 @@
       z-index: 20;
     }
 
-    /* Botões */
     .icon-btn {
       width: 80px;
       height: 80px;
@@ -68,14 +68,50 @@
     }
 
     #download { display: none; }
+
+    /* PREVIEW */
+    #preview {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.9);
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 50;
+    }
+
+    #previewImg {
+      width: 85vw;
+      max-width: 320px;
+      border-radius: 12px;
+      border: 3px solid white;
+      margin-bottom: 20px;
+    }
+
+    .preview-btn {
+      padding: 12px 20px;
+      font-size: 16px;
+      border-radius: 8px;
+      border: none;
+      margin-bottom: 10px;
+      cursor: pointer;
+    }
+
+    .save {
+      background: #ea76a1;
+      color: white;
+    }
+
+    .retry {
+  background: #ea76a1;
+  color: white;
+    }
   </style>
 </head>
+
 <body>
 
-<video id="video" autoplay muted playsinline></video>
-  <img id="overlay" src="moldura.png" alt="Moldura" />
-  <div id="buttons">
-    
   <div id="camera-wrap">
     <video id="video" autoplay playsinline muted></video>
     <img id="frame" src="moldura.png">
@@ -86,22 +122,14 @@
     <img id="snapBtn" class="icon-btn" src="tirarfoto.png" title="Tirar Foto">
   </div>
 
-  <a id="download" download="fotomoldurapersonalizada.png"></a>
+  <a id="download" download="moldurapersonalizada.png"></a>
 
+  <!-- PREVIEW -->
+  <div id="preview">
+    <img id="previewImg">
+    <button id="savePhoto" class="preview-btn save">Salvar na galeria</button>
+    <button id="retryPhoto" class="preview-btn retry">Tirar outra</button>
   </div>
-  <canvas id="canvas" style="display:none;"></canvas>
-  <div id="preview-container">
-    <img id="photo-preview" />
-    <button id="save-btn">Salvar na galeria</button>
-    <button id="retry-btn">Tirar outra</button>
-    <div id="instructions">
-      Se estiver no iPhone:<br>
-      Toque e segure a imagem e selecione “Salvar na Fototeca”.
-    </div>
-
-  </div>
-
-  <a id="download" download="fotomoldurapersonalizada.png"></a>
 
   <script>
     const video = document.getElementById("video");
@@ -109,6 +137,11 @@
     const snapBtn = document.getElementById("snapBtn");
     const switchBtn = document.getElementById("switchBtn");
     const download = document.getElementById("download");
+
+    const preview = document.getElementById("preview");
+    const previewImg = document.getElementById("previewImg");
+    const savePhoto = document.getElementById("savePhoto");
+    const retryPhoto = document.getElementById("retryPhoto");
 
     let stream = null;
     let usingFront = true;
@@ -125,9 +158,7 @@
       stream = await navigator.mediaDevices.getUserMedia(constraints);
       video.srcObject = stream;
 
-      // Espelhamento apenas no preview
       video.style.transform = usingFront ? "scaleX(-1)" : "scaleX(1)";
-
       await waitForVideoReady();
     }
 
@@ -141,15 +172,12 @@
       });
     }
 
-    // Trocar câmera
     switchBtn.addEventListener("click", () => {
       usingFront = !usingFront;
       startCamera();
     });
 
-    // Tirar foto
     snapBtn.addEventListener("click", async () => {
-
       await waitForVideoReady();
 
       const vw = video.videoWidth;
@@ -168,7 +196,6 @@
       buffer.height = targetH;
       const btx = buffer.getContext("2d");
 
-      // --- DESENHAR A CÂMERA ---
       btx.save();
       if (usingFront) {
         btx.translate(targetW, 0);
@@ -195,16 +222,24 @@
       btx.drawImage(video, sx, sy, sw, sh, 0, 0, targetW, targetH);
       btx.restore();
 
-      // Copiar buffer
       ctx.drawImage(buffer, 0, 0);
-
-      // Desenhar moldura (única)
       ctx.drawImage(frame, 0, 0, targetW, targetH);
 
       const img = canvas.toDataURL("image/png");
+
+      previewImg.src = img;
+      preview.style.display = "flex";
       download.href = img;
-      download.click();
     });
+
+    savePhoto.onclick = () => {
+      download.click();
+      preview.style.display = "none";
+    };
+
+    retryPhoto.onclick = () => {
+      preview.style.display = "none";
+    };
 
     startCamera();
   </script>
