--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>DUAS MOLDURAS</title>
+  <title>teste2</title>
 
   <style>
     html, body {
